--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300;1,400&family=Roboto+Mono:ital,wght@1,300&family=Roboto:ital@1&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
-
-
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Roboto+Slab:wght@100;400&display=swap');
 
 * {
@@ -11,13 +8,17 @@
 }
 
 body {
-    font-family: 'Lilita One', cursive;
+    font-family: 'Lilita One', cursive !important;
     height: 100%;
     background-color: #facdde;
-
-
+}
+p{
+    font-family: 'Lilita One', cursive !important;
 }
 
+h1{
+    font-family: 'Lilita One', cursive !important;
+}
 .header {
 
     display: flex;
@@ -842,3 +843,9 @@ a {
     display: flex;
     gap: 10px;
 }
+
+/* body {
+    font-family: 'Lilita One', cursive;
+    height: 100%;
+    background-color: #facdde;
+} */
