--- a/view/header.mustache
+++ b/view/header.mustache
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
      <!-- Enlace a jQuery desde el CDN de Google -->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.2.0/mustache.min.js"></script>
+
+     
 </head>
 <body>
 
