--- a/view/header.mustache
+++ b/view/header.mustache
@@ -8,7 +8,11 @@
     <link rel="icon" href="../public/hornerito-panz-lirt.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
      <!-- Enlace a jQuery desde el CDN de Google -->
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/mustache@3.1.0/dist/mustache.min.js"></script>
+
+
      <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.2.0/mustache.min.js"></script>
 
      
@@ -19,9 +23,8 @@
 
     <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg" class="logo shake-left-right"></a>
     <h1 class="nombre ">Animalia: Hornero Editions</h1>
-    <!-- ♠<svg></svg> -->
 
     <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
-    <!-- //../{{foto_de_usuario}}" -->
+ 
 
 </header>
