--- a/view/lobbyeditorView.mustache
+++ b/view/lobbyeditorView.mustache
@@ -4,21 +4,24 @@
     <div class="caja-uno centrado mt ">
         <h2 class="scale-up-vertical-center">Nos honra recibirle</h2>
         <h1 class="scale-up-vertical-center">Guardián del Conocimiento, {{user}}!</h1>
-        <img src="../public/epic-horenro-editor.svg" alt="hornerito" id="hornerito">
+        <img src="../public/epic-horenro-editor.svg" alt="hornerito" id="horneritoo">
 
         
 
     </div>
 
-    <div class="caja-dos centrado ">
-
-        <a href="/Partida/mostrarPantallaPartida" class="botonEditor  boton-nueva-partida" >Nueva partida</a>
-        <a href="/Ranking/mostrarPantallaRanking" class="botonEditor  boton-ver-ranking" >Ver ranking</a>
-        <a href="/Perfil/editarPreguntas" class="botonEditor " >Modificar  Preguntas Existentes</a>
-        <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor" >Revisar Preguntas Reportadas</a>
-        <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor" >Chequear Preguntas Sugeridas</a>
-
+    <div class="caja centrado">
+        <div class="grupo-botones centrado">
+            <a href="/Partida/mostrarPantallaPartida" class="botonEditor boton-nueva-partida">Nueva partida</a>
+            <a href="/Ranking/mostrarPantallaRanking" class="botonEditor boton-ver-ranking">Ver ranking</a>
+        </div>
+        <div class="grupo-botones">
+            <a href="/Perfil/editarPreguntas" class="botonEditor">Modificar Preguntas Existentes</a>
+            <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor">Revisar Preguntas Reportadas</a>
+            <a href="/Perfil/mostrarPantallaEditarSugerencias" class="botonEditor">Chequear Preguntas Sugeridas</a>
+        </div>
     </div>
+    
 
     <div class="contenedor_cerrar_sesion">
     <div class="caja bye centrado">
