--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -1,28 +1,34 @@
-<div class="caja gr-padre">
-   
-        <div class="gr">
-            <a href="/Admin/graficoEdad">VER EDADES
-                <img src="/public/graficoEdad.png" alt="">
-            </a>
-            <a href="/Admin/imprimirPDF1" target="_blank" class="boton">Imprimir</a>
-        </div>
+<div class="caja gr-padre w3-row-padding ">
 
-        <div class="gr">
-            <a href="/Admin/graficoGenero">VER GÉNEROS
-                <img src="/public/graficoGenero.png" alt="">
-            </a>
-            <a href="/Admin/imprimirPDF2" target="_blank" class="boton">Imprimir</a>
-        </div>
-   
 
-    
-        <div class=" gr">
-            <a href="/Admin/graficoMundial">VER DISTRIBUCIÓN GLOBAL
-                <img src="/public/graficoMundial.png" alt="">
-            </a>
-            <a href="/Admin/imprimirPDF3" target="_blank" class="boton">Imprimir</a>
-        </div>
-   
+
+    <div class="gr centrado w3-third ">
+        <h2>VER EDADES</h2>
+        <a href="/Admin/graficoEdad">
+            <img src="/public/graficoEdad.png" alt="grafico edades" width="100" height="auto">
+        </a>
+        <a href="/Admin/imprimirPDF1" target="_blank" class="boton">Imprimir</a>
+    </div>
+
+
+    <div class="gr centrado w3-third">
+        <h2>VER GÉNEROS</h2>
+        <a href="/Admin/graficoGenero">
+            <img src="/public/graficoGenero.png" alt="grafico generos" width="100" height="auto">
+        </a>
+        <a href="/Admin/imprimirPDF2" target="_blank" class="boton">Imprimir</a>
+    </div>
+
+
+
+    <div class=" gr centrado w3-third">
+        <h2>VER DISTRIBUCIÓN GLOBAL</h2>
+        <a href="/Admin/graficoMundial">
+            <img src="/public/graficoMundial.png" alt="grafico mundo" width="100" height="auto">
+        </a>
+        <a href="/Admin/imprimirPDF3" target="_blank" class="boton">Imprimir</a>
+    </div>
+
 
     <a class="boton" href="/Admin/ImprimirTodo" target="_blank" class="boton">Imprimir todos los gráficos juntos</a>
 </div>
