andan las rutas de los gifs en la bd

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -11,7 +11,7 @@
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/mustache@3.1.0/dist/mustache.min.js"></script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiq3xISXSZYgkd9GDAOdajy4NK2d3L7dY&libraries=places" async defer></script>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.2.0/mustache.min.js"></script>
 
@@ -25,6 +25,6 @@
     <h1 class="nombre ">Animalia: Hornero Editions</h1>
 
     <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
- 
 
 </header>
+
