--- a/view/header.mustache
+++ b/view/header.mustache
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,25 @@
     <link rel="stylesheet" type="text/css" href="../public/styles.css">
     <link rel="icon" href="../public/hornerito-panz-lirt.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-     <!-- Enlace a jQuery desde el CDN de Google -->
-     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/mustache@3.1.0/dist/mustache.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiq3xISXSZYgkd9GDAOdajy4NK2d3L7dY&libraries=places" async defer></script>
+    <!-- Enlace a jQuery desde el CDN de Google -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mustache@3.1.0/dist/mustache.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiq3xISXSZYgkd9GDAOdajy4NK2d3L7dY&libraries=places"
+        async defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.2.0/mustache.min.js"></script>
 
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.2.0/mustache.min.js"></script>
 
-     
 </head>
+
 <body>
 
-<header class="header">
+    <header class="header">
 
-    <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg" class="logo shake-left-right"></a>
-    <h1 class="nombre ">Animalia: Hornero Editions</h1>
+        <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg"
+                class="logo shake-left-right"></a>
+        <h1 class="nombre ">Animalia: Hornero Editions</h1>
 
-    <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
+        <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
 
-</header>
-
+    </header>
