--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -17,12 +17,12 @@
                 <option value="femenino">Femenino</option>
                 <option value="nodice">Prefiero no decirlo</option>
             </select>
-<input type="text" class ="input" id="ubicacion" name="ubicacion" placeholder="Ingresa tu ubicación">
-<div id="map"></div>
-            <!-- reemplazar con mapa -->
-    {{! <input type="text" class="input" id="addressInput" list="addressSuggestions" placeholder="Ingresa una dirección"> }}
 
-    <datalist id="addressSuggestions"></datalist>
+            <!-- reemplazar con mapa -->
+            <input type="text" id="ubicacion" name="ubicacion" placeholder="Ingresa tu ubicación">
+            <div id="map"></div>
+            
+
 
             <input type="email" placeholder="Correo electrónico" class="input" required name="email">
 
@@ -53,93 +53,53 @@
         </form>
     </div>
 </div>
+
 <script>
-       var map;
+    var map;
+  
+    function initMap() {
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: { lat: 0, lng: 0 }, // Centrar el mapa en coordenadas iniciales
+        zoom: 15 // Establecer el nivel de zoom
+      });
+  
+      var input = document.getElementById('ubicacion');
+      var autocomplete = new google.maps.places.Autocomplete(input);
+  
+      autocomplete.bindTo('bounds', map);
+  
+      var marker = new google.maps.Marker({
+        map: map,
+        anchorPoint: new google.maps.Point(0, -29)
+      });
+  
+      autocomplete.addListener('place_changed', function () {
+        marker.setVisible(false);
+        var place = autocomplete.getPlace();
+  
+        if (!place.geometry) {
+          window.alert("No hay detalles disponibles para la entrada: '" + place.name + "'");
+          return;
+        }
+  
+        if (place.geometry.viewport) {
+          map.fitBounds(place.geometry.viewport);
+        } else {
+          map.setCenter(place.geometry.location);
+          map.setZoom(17);
+        }
+  
+        marker.setPosition(place.geometry.location);
+        marker.setVisible(true);
+      });
+  
+      map.addListener('click', function (event) {
+        marker.setPosition(event.latLng);
+        map.setCenter(marker.getPosition());
+        document.getElementById('ubicacion').value = event.latLng.lat() + ', ' + event.latLng.lng();
+      });
+    }
+  </script>
 
-       function initMap() {
-         map = new google.maps.Map(document.getElementById('map'), {
-           center: { lat: 0, lng: 0 }, // Centrar el mapa en coordenadas iniciales
-           zoom: 15 // Establecer el nivel de zoom
-         });
-
-
-
-         var input = document.getElementById('ubicacion');
-         var autocomplete = new google.maps.places.Autocomplete(input);
-
-
-
-         autocomplete.bindTo('bounds', map);
-
-
-
-         var marker = new google.maps.Marker({
-           map: map,
-           anchorPoint: new google.maps.Point(0, -29)
-         });
-
-
-
-         autocomplete.addListener('place_changed', function () {
-           marker.setVisible(false);
-           var place = autocomplete.getPlace();
-
-
-
-           if (!place.geometry) {
-             window.alert("No hay detalles disponibles para la entrada: '" + place.name + "'");
-             return;
-           }
-
-
-
-           if (place.geometry.viewport) {
-             map.fitBounds(place.geometry.viewport);
-           } else {
-             map.setCenter(place.geometry.location);
-             map.setZoom(17);
-           }
-
-
-
-           marker.setPosition(place.geometry.location);
-           marker.setVisible(true);
-         });
-
-
-
-         map.addListener('click', function (event) {
-           marker.setPosition(event.latLng);
-           map.setCenter(marker.getPosition());
-           document.getElementById('ubicacion').value = event.latLng.lat() + ', ' + event.latLng.lng();
-         });
-       }
-</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiq3xISXSZYgkd9GDAOdajy4NK2d3L7dY&libraries=places&callback=initMap" async defer></script>
-    {{! <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const addressInput = document.getElementById('addressInput');
-            const addressSuggestions = document.getElementById('addressSuggestions');
-
-            addressInput.addEventListener('input', function () {
-                const searchTerm = addressInput.value;
-
-                // Limpia las sugerencias anteriores
-                addressSuggestions.innerHTML = '';
-
-                // Realiza una solicitud a la API de Nominatim
-                fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(searchTerm)}`)
-                    .then(response => response.json())
-                    .then(data => {
-                        // Agrega nuevas sugerencias al datalist
-                        data.forEach(result => {
-                            const option = document.createElement('option');
-                            option.value = result.display_name;
-                            addressSuggestions.appendChild(option);
-                        });
-                    })
-                    .catch(error => console.error('Error al obtener sugerencias:', error));
-            });
-        });
-    </script> }}
 
