--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -17,11 +17,11 @@
                 <option value="femenino">Femenino</option>
                 <option value="nodice">Prefiero no decirlo</option>
             </select>
-
+<div class="m centrado">
             <!-- reemplazar con mapa -->
             <input type="text" id="ubicacion" name="ubicacion" placeholder="Ingresa tu ubicación">
             <div id="map"></div>
-            
+          </div>
 
 
             <input type="email" placeholder="Correo electrónico" class="input" required name="email">
