--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -1,105 +1,105 @@
+<div class="contenedorPapa index">
+  <div class="formulario">
+    <h3>¿Todavía out? Empeza a jugar</h3>
+    <!-- formulario registro-->
+    <form method="post" action="/Animalia/procesarFormulario" enctype="multipart/form-data">
 
-<div class="contenedorPapa index"> 
-    <div class="formulario">
-        <h3>¿Todavía out? Empeza a jugar</h3>
-        <!-- formulario registro-->
-        <form method="post" action="/Animalia/procesarFormulario" enctype="multipart/form-data">
-            
-            <input type="text" placeholder="Nombre completo" class="input" autofocus required name="nombre">
-            
-            <input type="text" placeholder="Nombre de usuario" class="input" required name="username">
-            
-            <input type="date" class="input" required name="fecha">
-            
-            <select name="sexo">
-                <option disabled selected>Seleccionar sexo</option>
-                <option value="masculino">Masculino</option>
-                <option value="femenino">Femenino</option>
-                <option value="nodice">Prefiero no decirlo</option>
-            </select>
-<div class="m centrado">
-            <!-- reemplazar con mapa -->
-            <input type="text" id="ubicacion" name="ubicacion" placeholder="Ingresa tu ubicación">
-            <div id="map"></div>
-          </div>
+      <input type="text" placeholder="Nombre completo" class="input" autofocus required name="nombre">
+
+      <input type="text" placeholder="Nombre de usuario" class="input" required name="username">
+
+      <input type="date" class="input" required name="fecha">
+
+      <select name="sexo">
+        <option disabled selected>Seleccionar sexo</option>
+        <option value="masculino">Masculino</option>
+        <option value="femenino">Femenino</option>
+        <option value="nodice">Prefiero no decirlo</option>
+      </select>
+      <div class="m centrado">
+        <!-- reemplazar con mapa -->
+        <input type="text" id="ubicacion" name="ubicacion" placeholder="Ingresa tu ubicación">
+        <div id="map"></div>
+      </div>
 
 
-            <input type="email" placeholder="Correo electrónico" class="input" required name="email">
+      <input type="email" placeholder="Correo electrónico" class="input" required name="email">
 
-            <input type="password" placeholder="Contraseña" class="input" required name="pass">
-            <input type="password" placeholder="Repeti la contraseña" class="input" required name="r_pass">
+      <input type="password" placeholder="Contraseña" class="input" required name="pass">
+      <input type="password" placeholder="Repeti la contraseña" class="input" required name="r_pass">
 
-            <div class="mt centrado">
-                <label for="file" class="botonArchivo">
-                    Subir foto de perfil
-                    <input type="file" class="botonArchivo" name="file" id="file" accept=".jpg, .png">
-                </label>
-            </div>
+      <div class="mt centrado">
+        <label for="file" class="botonArchivo">
+          Subir foto de perfil
+          <input type="file" class="botonArchivo" name="file" id="file" accept=".jpg, .png">
+        </label>
+      </div>
 
-            <input type="submit" value="Registrarse" class="boton registro" name="enviar">
-            <p class="mensaje-error-registro">{{mensaje-error-registro}}</p>
-            <p class="mensajeConf">{{mensaje-registro-exitoso}}</p>
-        </form>
-    </div>
+      <input type="submit" value="Registrarse" class="boton registro" name="enviar">
+      <p class="mensaje-error-registro">{{mensaje-error-registro}}</p>
+      <p class="mensajeConf">{{mensaje-registro-exitoso}}</p>
+    </form>
+  </div>
 
-    <div class="formulario">
-        <h3>¡A vos te conozco! Tira tu data </h3>
-        <!-- formulario login-->
-        <form method="post" action="/Animalia/validarLoginUsuario">
-            <input type="text" placeholder="Usuario" class="input" autofocus required name="username">
-            <input type="password" placeholder="Contraseña" class="input" required name="pass">
-            <input type="submit" value="Loggin" class="boton" name="enviar">
-            <p class="mensaje-error-registro">{{error-login}}</p>
-        </form>
-    </div>
+  <div class="formulario">
+    <h3>¡A vos te conozco! Tira tu data </h3>
+    <!-- formulario login-->
+    <form method="post" action="/Animalia/validarLoginUsuario">
+      <input type="text" placeholder="Usuario" class="input" autofocus required name="username">
+      <input type="password" placeholder="Contraseña" class="input" required name="pass">
+      <input type="submit" value="Loggin" class="boton" name="enviar">
+      <p class="mensaje-error-registro">{{error-login}}</p>
+    </form>
+  </div>
 </div>
 
 <script>
-    var map;
-  
-    function initMap() {
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: { lat: 0, lng: 0 }, // Centrar el mapa en coordenadas iniciales
-        zoom: 15 // Establecer el nivel de zoom
-      });
-  
-      var input = document.getElementById('ubicacion');
-      var autocomplete = new google.maps.places.Autocomplete(input);
-  
-      autocomplete.bindTo('bounds', map);
-  
-      var marker = new google.maps.Marker({
-        map: map,
-        anchorPoint: new google.maps.Point(0, -29)
-      });
-  
-      autocomplete.addListener('place_changed', function () {
-        marker.setVisible(false);
-        var place = autocomplete.getPlace();
-  
-        if (!place.geometry) {
-          window.alert("No hay detalles disponibles para la entrada: '" + place.name + "'");
-          return;
-        }
-  
-        if (place.geometry.viewport) {
-          map.fitBounds(place.geometry.viewport);
-        } else {
-          map.setCenter(place.geometry.location);
-          map.setZoom(17);
-        }
-  
-        marker.setPosition(place.geometry.location);
-        marker.setVisible(true);
-      });
-  
-      map.addListener('click', function (event) {
-        marker.setPosition(event.latLng);
-        map.setCenter(marker.getPosition());
-        document.getElementById('ubicacion').value = event.latLng.lat() + ', ' + event.latLng.lng();
-      });
-    }
-  </script>
+  var map;
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiq3xISXSZYgkd9GDAOdajy4NK2d3L7dY&libraries=places&callback=initMap" async defer></script>
+  function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: { lat: 0, lng: 0 }, // Centrar el mapa en coordenadas iniciales
+      zoom: 15 // Establecer el nivel de zoom
+    });
 
+    var input = document.getElementById('ubicacion');
+    var autocomplete = new google.maps.places.Autocomplete(input);
+
+    autocomplete.bindTo('bounds', map);
+
+    var marker = new google.maps.Marker({
+      map: map,
+      anchorPoint: new google.maps.Point(0, -29)
+    });
+
+    autocomplete.addListener('place_changed', function () {
+      marker.setVisible(false);
+      var place = autocomplete.getPlace();
+
+      if (!place.geometry) {
+        window.alert("No hay detalles disponibles para la entrada: '" + place.name + "'");
+        return;
+      }
+
+      if (place.geometry.viewport) {
+        map.fitBounds(place.geometry.viewport);
+      } else {
+        map.setCenter(place.geometry.location);
+        map.setZoom(17);
+      }
+
+      marker.setPosition(place.geometry.location);
+      marker.setVisible(true);
+    });
+
+    map.addListener('click', function (event) {
+      marker.setPosition(event.latLng);
+      map.setCenter(marker.getPosition());
+      document.getElementById('ubicacion').value = event.latLng.lat() + ', ' + event.latLng.lng();
+    });
+  }
+</script>
+
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiq3xISXSZYgkd9GDAOdajy4NK2d3L7dY&libraries=places&callback=initMap"
+  async defer></script>
