--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -8,7 +8,7 @@
         <h1 class="centrado nombre ">Perfil</h1>
     
         {{#usuario}}
-            <img src="{{foto_de_perfil}}" alt="fotico">
+            <img src=".{{foto_de_perfil}}" alt="fotico" class="foto">
             <p>Usuario: {{user_name}}</p>
             <p>Nombre: {{nombre_completo}}</p>
             <p>Fecha de nacimiento: {{anio_de_nacimiento}}</p>
