--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -1,12 +1,19 @@
 <div class="caja gr-padre w3-row-padding ">
-
-
-
+    
     <div class="gr centrado w3-third ">
         <h2>VER EDADES</h2>
         <a href="/Admin/graficoEdad">
             <img src="/public/graficoEdad.png" alt="grafico edades" width="100" height="auto">
         </a>
+        <form action="/Admin/graficoEdad" method="post">
+            <select name="filtro" id="">
+                <option value="1">Dia</option>
+                <option value="2">Semana</option>
+                <option value="3">Mes</option>
+                <option value="4">Año</option>
+            </select>
+            <input class="boton" type="submit" value="Aplicar filtro">
+        </form>
         <a href="/Admin/imprimirPDF1" target="_blank" class="boton">Imprimir</a>
     </div>
 
@@ -16,19 +23,32 @@
         <a href="/Admin/graficoGenero">
             <img src="/public/graficoGenero.png" alt="grafico generos" width="100" height="auto">
         </a>
+        <form action="/Admin/graficoGenero" method="post">
+            <select name="filtro" id="">
+                <option value="1">Dia</option>
+                <option value="2">Semana</option>
+                <option value="3">Mes</option>
+                <option value="4">Año</option>
+            </select>
+        </form>
         <a href="/Admin/imprimirPDF2" target="_blank" class="boton">Imprimir</a>
     </div>
-
-
 
     <div class=" gr centrado w3-third">
         <h2>VER DISTRIBUCIÓN GLOBAL</h2>
         <a href="/Admin/graficoMundial">
             <img src="/public/graficoMundial.png" alt="grafico mundo" width="100" height="auto">
         </a>
+        <form action="/Admin/graficoMundial" method="post">
+            <select name="filtro" id="">
+                <option value="1">Dia</option>
+                <option value="2">Semana</option>
+                <option value="3">Mes</option>
+                <option value="4">Año</option>
+            </select>
+        </form>
         <a href="/Admin/imprimirPDF3" target="_blank" class="boton">Imprimir</a>
     </div>
-
 
     <a class="boton" href="/Admin/ImprimirTodo" target="_blank" class="boton">Imprimir todos los gráficos juntos</a>
 </div>
