--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -27,7 +27,7 @@
 
         <form action="/Partida/reportarPregunta" method="post" id="reportarForm">
             <!-- Tengo que poner el name como quiera  el post y el value como estaria llamado en mustache -->
-            <input type="hidden" value="{{id}}" name="id">
+            <input type="hidden" value="{{id2}}" name="{{id2}}">
             <input class="boton-sec centro" type="submit" name="enviar" value="Reportar Pregunta" id="reportarBtn">
         </form>
         {{/pregunta}}
