Filtro de grafico mundial

--- a/view/graficosView.mustache
+++ b/view/graficosView.mustache
@@ -2,7 +2,7 @@
     
     <div class="gr centrado w3-third ">
         <h2>VER EDADES</h2>
-        <a href="/Admin/graficoEdad">
+        <a href="#">
             <img src="/public/graficoEdad.png" alt="grafico edades" width="100" height="auto">
         </a>
         <form action="/Admin/graficoEdad" method="post">
@@ -20,7 +20,7 @@
 
     <div class="gr centrado w3-third">
         <h2>VER GÉNEROS</h2>
-        <a href="/Admin/graficoGenero">
+        <a href="#">
             <img src="/public/graficoGenero.png" alt="grafico generos" width="100" height="auto">
         </a>
         <form action="/Admin/graficoGenero" method="post">
@@ -37,7 +37,7 @@
 
     <div class=" gr centrado w3-third">
         <h2>VER DISTRIBUCIÓN GLOBAL</h2>
-        <a href="/Admin/graficoMundial">
+        <a href="#">
             <img src="/public/graficoMundial.png" alt="grafico mundo" width="100" height="auto">
         </a>
         <form action="/Admin/graficoMundial" method="post">
@@ -47,6 +47,7 @@
                 <option value="3">Mes</option>
                 <option value="4">Año</option>
             </select>
+            <input class="boton" type="submit" value="Aplicar filtro">
         </form>
         <a href="/Admin/imprimirPDF3" target="_blank" class="boton">Imprimir</a>
     </div>
