--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -10,4 +10,8 @@
     <button class="boton"><a href="/Lobby/mostrarPantallaLobby">VOLVER AL
             LOBBBY</a></button>
         </div>
+    <a class="boton" href="/Partida/pantallaCompra">Comprar trampita</a>
+                <!-- <a href="/Partida/pantallaCompra" class="trampita"> 💣 </a>
+                <a href="/Partida/pantallaCompra" class="trampita"> 💫 </a>
+                <a href="/Partida/pantallaCompra" class="trampita"> 🃏 </a> -->
 </div>
